eks-blue/lbc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-09-06T17:50:32Z"
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: aws-load-balancer-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/version: v2.6.0
    argocd.argoproj.io/instance: addon-eks-blueprint-workshop-blue-aws-load-balancer-controller
    helm.sh/chart: aws-load-balancer-controller-1.6.0
    prometheus.io/service-monitor: "false"
  name: aws-load-balancer-webhook-service
  namespace: kube-system
  resourceVersion: "3887"
  uid: b1fb4ac7-51a9-4f0d-a5ad-cd7ad0ffa64e
spec:
  clusterIP: 172.20.174.24
  clusterIPs:
  - 172.20.174.24
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: webhook-server
    port: 443
    protocol: TCP
    targetPort: webhook-server
  selector:
    app.kubernetes.io/instance: aws-load-balancer-controller
    app.kubernetes.io/name: aws-load-balancer-controller
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
